k8s/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: one-api-primary
  namespace: one-api
  labels:
    app.kubernetes.io/name: one-api
    app.kubernetes.io/component: primary
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: one-api
    app.kubernetes.io/component: primary
  ports:
    - name: http
      port: 3000
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: one-api-worker
  namespace: one-api
  labels:
    app.kubernetes.io/name: one-api
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: one-api
    app.kubernetes.io/component: worker
  ports:
    - name: http
      port: 3000
      targetPort: http
